first page fix and upgrade visibility

--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ img {
   gap: 20px;
   padding: 20px;
   color: white;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   align-items: center;
   justify-content: center;
   border-radius: 12px;
